battery technically works and a little fiy with the laser, now the blocks around it will render

--- a/src/main/resources/assets/swordsplus/lang/en_us.json
+++ b/src/main/resources/assets/swordsplus/lang/en_us.json
@@ -41,5 +41,7 @@
 	"block.swordsplus.vanadium_ore": "Vanadium Ore",
 	"block.swordsplus.vanadium_block": "Vanadium Block",
 	
-	"itemGroup.swordsplus": "Swords+"
+	"itemGroup.swordsplus": "Swords+",
+
+	"tooltip.swordsplus.battery.energy": "Energy: %s/%d"
 }
