A step in the right direction?

--- a/src/main/resources/assets/swordsplus/lang/en_us.json
+++ b/src/main/resources/assets/swordsplus/lang/en_us.json
@@ -17,6 +17,7 @@
 	"item.swordsplus.qcarbon": "Q-Carbon",
 	"item.swordsplus.rapid_sword": "Rapid Sword",
 	"item.swordsplus.raw_vanadium": "Raw Vanadium",
+	"item.swordsplus.sun_spear": "Sun Spear",
 	"item.swordsplus.tin_ingot": "Tin Ingot",
 	"item.swordsplus.tin_sword": "Tin Sword",
 	"item.swordsplus.trumpet": "Trumpet",
